--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="file:///C:/Users/GIGABYTE/Desktop/web%20forr%20bus/images/bbr2.png" alt="My YouTube Logo">
+        <img class="logo" src="images/bbr2.png" alt="My YouTube Logo">
     </header>
     <nav>
         <ul>
-            <li><a href="file:///C:/Users/GIGABYTE/Desktop/web%20forr%20bus/Home.html">Home</a></li>
+            <li><a href="Home.html">Home</a></li>
             <li><a href="UCa8-zfnrMFgp6iFzpHd_y8Q">Channel</a></li>
 
         </ul>
