--- a/Home.html
+++ b/Home.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="images/bbr.png" alt="My YouTube Logo">
+        <img class="logo" src="bbr.png" alt="My YouTube Logo">
     </header>
     <nav>
         <ul>
