--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="images/bbr2.png" alt="My YouTube Logo">
+        <img class="logo" src="bbr2.png" alt="My YouTube Logo">
     </header>
     <nav>
         <ul>
@@ -114,7 +114,7 @@
 
 <p>White Livery Like 👇<p>
 
- <li><a href=""https://www.mediafire.com/download/87vfka4bt6ynko8"">Download</a></li>
+ <li><a href="https://www.mediafire.com/download/87vfka4bt6ynko8">Download</a></li>
 
 
 <p>Mod Video Like👇<p>
