--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <nav>
         <ul>
             <li><a href="Home.html">Home</a></li>
-            <li><a href="UCa8-zfnrMFgp6iFzpHd_y8Q">Channel</a></li>
+            <li><a href="https://www.youtube.com/@devilsgarage3203/about">Channel</a></li>
 
         </ul>
     </nav>
