--- a/Home.html
+++ b/Home.html
@@ -47,10 +47,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Trending</a></li>
-            <li><a href="#">Subscriptions</a></li>
-            <li><a href="#">Library</a></li>
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="https://www.youtube.com/@devilsgarage3203/about">Chaneel</a></li>
+            
         </ul>
     </nav>
     <div class="container">
