--- a/index.html
+++ b/index.html
@@ -105,12 +105,7 @@
         <div class="video">
             <iframe src="https://www.youtube.com/embed/AZ7TktpIABQ?si=0ln2RKZh51BhIuCP" frameborder="0" allowfullscreen></iframe>
             <h2>Common Club Grand BMR White Livery Release 💥കേറി download ചെയ്യ് മക്കളെ 💥</h2>
-            <p>Livery Arukum Sent Cheyaruthi
-ഈ  videoയുടെ  Like Kodukuka
-
-
-<p>Download Likes 👇<p>
-
+<p>Livery Arukum Sent Cheyaruthi ഈ  videoയുടെ  Like Kodukuka<p>
 
 <p>White Livery Like 👇<p>
 
