--- a/Home.html
+++ b/Home.html
@@ -48,7 +48,7 @@
     <nav>
         <ul>
             <li><a href="Home.html">Home</a></li>
-            <li><a href="https://www.youtube.com/@devilsgarage3203/about">Chaneel</a></li>
+            <li><a href="https://www.youtube.com/@BestBussidRiders">Chaneel</a></li>
             
         </ul>
     </nav>
@@ -59,20 +59,16 @@
         </div>
         <div class="featured-videos">
             <div class="video">
-                <iframe src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://youtu.be/AZ7TktpIABQ?si=6dT4M_bMjJNl1Zxh" frameborder="0" allowfullscreen></iframe>
                 <h2>Featured Video 1</h2>
                 <p>Description for Featured Video 1 goes here.</p>
             </div>
             <div class="video">
-                <iframe src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://youtu.be/o5e9K4L2vqA?si=6KG2y1D4Lo0_pRWI" frameborder="0" allowfullscreen></iframe>
                 <h2>Featured Video 2</h2>
                 <p>Description for Featured Video 2 goes here.</p>
             </div>
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
-                <h2>Featured Video 3</h2>
-                <p>Description for Featured Video 3 goes here.</p>
-            </div>
+            
    
     </div>
 </body>
