--- a/Home.html
+++ b/Home.html
@@ -59,12 +59,12 @@
         </div>
         <div class="featured-videos">
             <div class="video">
-                <iframe src="https://youtu.be/AZ7TktpIABQ?si=6dT4M_bMjJNl1Zxh" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/AZ7TktpIABQ?si=6dT4M_bMjJNl1Zxh" frameborder="0" allowfullscreen></iframe>
                 <h2>Featured Video 1</h2>
                 <p>Description for Featured Video 1 goes here.</p>
             </div>
             <div class="video">
-                <iframe src="https://youtu.be/o5e9K4L2vqA?si=6KG2y1D4Lo0_pRWI" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/o5e9K4L2vqA?si=6KG2y1D4Lo0_pRWI" frameborder="0" allowfullscreen></iframe>
                 <h2>Featured Video 2</h2>
                 <p>Description for Featured Video 2 goes here.</p>
             </div>
